# tty-clipboard

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PROTOCOL.md  README.md  TLS_DEBUGGING.md  USAGE.md  create-certs.sh  meson.build  meson_options.txt  rebuild_and_test.py  rebuild_and_test.sh  run_rebuild_test.sh  run_test.sh  test-bridge-build.sh  tty-client.c  tty-clipboard.c  tty-clipboard.h  tty-server.c
.github/workflows/: meson-build.yml  shellcheck.yml
docs/: C_BRIDGE_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  METADATA_FLOW.md  MIGRATION_GUIDE.md  PROTOCOL.md
proto/: clipboard.proto
scripts/: create-certs.sh  install-server.sh  klipper-bridge.sh  setup.sh  update-ssh-localforward.py  update_ssh_localforward.py  wayland-bridge.sh
src/: CLIPBOARD_BRIDGE.md  klipper-plugin.c  meson.build  mock-plugin.c  plugin-registry.h  plugin.h  tty-bridge.c  tty-client.c  tty-clipboard.c  tty-clipboard.h  tty-server.c  wayland-plugin.c
subprojects/: libprotobuf-c.wrap  mbedtls.wrap
subprojects/packagefiles/libprotobuf-c/: meson.build
subprojects/packagefiles/mbedtls/: meson.build  tty_clipboard_mbedtls_config.h
tests/: README.md  meson.build  setup-test-certs.sh  test-basic.sh  test-bridge-mock.sh  test-bridge-plugin.sh  test-bridge-subscribe.sh  test-encoding-binary.sh  test-encoding-text.sh  test-large-transfer.sh  test-max-size-drop.sh  test-max-size.sh  test-multi-port.sh  test-no-loopback.sh  test-no-self-echo.sh  test-protobuf.sh  test-update-ssh-localforward.sh  test_update_ssh_localforward.sh
